--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.kmecpp</groupId>
 			<artifactId>jflame</artifactId>
-			<version>LATEST</version>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
